# Recipes_plannerApp

./: .gitignore  README.md  app.py  auth.py  components.py  pyproject.toml  recipe.py  requirements.txt  utils.py
.githooks/: pre-commit
.github/workflows/: deploy-backend.yml
.streamlit/: config.toml
backend/: .env.example  config.py  main.py  models.py  requirements.txt
backend/middleware/: auth.py
backend/routers/: grocery.py  meal_plans.py  recipes.py  users.py
backend/services/: firestore.py  gemini.py  grocery_ai.py
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/grocery/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/recipes/: page.tsx
frontend/components/: AuthProvider.tsx  GroceryList.tsx  Markdown.tsx  Navbar.tsx  PlanDialog.tsx  RecipeCard.tsx  RecipeSheet.tsx  WeekCarousel.tsx
frontend/lib/: api.ts  dateUtils.ts  firebase.ts  types.ts
frontend/public/: manifest.json
legacy_streamlit/: components.py  db.py  pyproject.toml  test_firestore.py
legacy_streamlit/.streamlit/: config.toml
scripts/: encode_firebase_secret.py
