[project]
name = "recipes-plannerapp"
version = "0.1.0"
description = "Intelligent Agentic Meal Planner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firebase-admin>=7.4.0",
    "google-genai>=1.72.0",
    "pillow>=12.2.0",
    "streamlit>=1.56.0",
]

[tool.uv]
# This is a Streamlit app, not an installable package.
# Prevents uv/poetry from trying to install the project itself.
package = false
