[project]
name = "recipes-plannerapp"
version = "0.1.0"
description = "Intelligent Agentic Meal Planner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firebase-admin>=7.4.0",
    "google-genai>=1.72.0",
    "pillow>=12.2.0",
    "streamlit>=1.56.0",
]

[tool.uv]
# This is a Streamlit app, not an installable package.
package = false

[tool.poetry]
# Tells Poetry (used by Streamlit Cloud) not to install this as a package.
package-mode = false
